--- a/views/partials/admin/header.ejs
+++ b/views/partials/admin/header.ejs
@@ -38,7 +38,7 @@
                     </a>
                 </li>
                 <li class="menu-item ">
-                    <a class="menu-link" href="/admin/product"> <i class="icon material-icons md-shopping_bag"></i>
+                    <a class="menu-link" href="/admin/product"> <i class="icon material-icons md-shopping_cart"></i>
                         <span class="text">Products</span>
                     </a>
                    
@@ -50,20 +50,27 @@
                     
                 </li> -->
                 <li class="menu-item">
-                    <a class="menu-link" href="/admin/users"> <i class="icon material-icons md-store"></i>
+                    <a class="menu-link" href="/admin/users"> <i class="icon material-icons md-people"></i>
                         <span class="text">Users</span>
                     </a>
                     
                 </li>
                 <li class="menu-item ">
-                    <a class="menu-link" href="/admin/categories"> <i class="icon material-icons md-add_box"></i>
+                    <a class="menu-link" href="/admin/categories"> <i class="icon material-icons md-category"></i>
                         <span class="text">Category</span>
                     </a>
                     
                 </li>
                 <li class="menu-item ">
-                    <a class="menu-link" href="/admin/orders"> <i class="icon material-icons md-add_box"></i>
+                    <a class="menu-link" href="/admin/orders"> <i class="icon material-icons md-receipt_long"></i>
                         <span class="text">Orders</span>
+                    </a>
+                    
+                </li>
+
+                <li class="menu-item ">
+                    <a class="menu-link" href="/admin/coupon"> <i class="icon material-icons md-confirmation_number"></i>
+                        <span class="text">Coupon</span>
                     </a>
                     
                 </li>
